--- a/Ejercicio1_4.html
+++ b/Ejercicio1_4.html
@@ -5,10 +5,12 @@
     <title></title>
   </head>
   <body>
-    <h1> Bienvenido a las actividades de Gabri </h1>
+    <h1> Bienvenido/a a las actividades de Gabri </h1>
     <p id:"miParrafo"> Mi primer programa en Java script </p>
     <script src ="alerts1_4.js">
-    
+
+
+
     </script>
   </body>
 </html>
